add queue service and controller, upload swagger.yaml, some changes
